--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": ">=5.4.0",
     "yiisoft/yii2": "~2.0.0",
-    "bower-asset/Numeral-js": "*"
+    "bower-asset/numeral": "*"
   },
   "autoload": {
     "psr-4": {
